// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdfBwQ sc-gsTCUz iSfdKP gWqNOS"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdfBwQ sc-gsTCUz dpkuhk gWqNOS"
>
  foo
</button>
`;
